--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://user_node_cafe:tPDzTOxKTFcroWPo@cluster0.j1vct.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=Est03sMyPuBl1ck3y23@913
 
-
-
+GOOGLE_CLIENT_ID=351753012183-ct5hbsniamlr3cccenllumns8q3kchog.apps.googleusercontent.com
+GOOGLE_SECRET_ID=zmzE3YixFpW5eGbTLy7s95AT
